[runtime] Backwards-deployment support for class_getImageName (#18076)

Merge pull request #18060 from jrose-apple/and-you-get-a-class_getImageName

https://bugs.swift.org/browse/SR-1917
rdar://problem/41535552
(cherry picked from commit 6f42fcc8c40b835d5f91f9af7f9a4b960153cf7a)